REGRESSION (iOS 12.2): CSS perspective property value can only be set correctly once https://bugs.webkit.org/show_bug.cgi?id=197105 Source/WebCore:

rdar://problem/50068230

Reviewed by Zalan Bujtas.

Make sure we trigger a geometry update when style properties change that
result in a StyleDifference::RecompositeLayer, and which are updated on layers
via RenderLayerBacking::updateGeometry().

Tests: compositing/style-change/backface-visibility-change.html
       compositing/style-change/perspective-change.html
       compositing/style-change/perspective-origin-change.html
       compositing/style-change/transform-origin-change.html
       compositing/style-change/transform-style-change.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::recompositeChangeRequiresGeometryUpdate):
(WebCore::RenderLayerCompositor::layerStyleChanged):

LayoutTests:

Reviewed by Zalan Bujtas.

* compositing/style-change/backface-visibility-change-expected.html: Added.
* compositing/style-change/backface-visibility-change.html: Added.
* compositing/style-change/perspective-change-expected.html: Added.
* compositing/style-change/perspective-change.html: Added.
* compositing/style-change/perspective-origin-change-expected.html: Added.
* compositing/style-change/perspective-origin-change.html: Added.
* compositing/style-change/transform-origin-change-expected.html: Added.
* compositing/style-change/transform-origin-change.html: Added.
* compositing/style-change/transform-style-change-expected.html: Added.
* compositing/style-change/transform-style-change.html: Added.

Canonical link: https://commits.webkit.org/211463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244612 268f45cc-cd09-0410-ab3c-d52691b4dbfc